# ClubKonnect

./: .gitignore  localhost_2023-08-21_16-19-13.report.html  pyproject.toml  requirements.txt
.github/workflows/: master_clubkonnect.yml
Recruitments/: custom_email_backend.py  settings.py  urls.py
forms/: models.py  views.py
forms/migrations/: 0005_entries_feedback.py  0006_forms_department.py
templates/: 404.html  all_entries.html  all_forms.html  base.html  close.html  create_form.html  edit_form_fields.html  entry_detail.html  form_details.html  form_entries.html  form_view.html  home.html  new_form.html
templates/account/: _button.html  _non_field_errors.html  _render_form.html  base.html  login.html  signup.html
templates/email/: Status_update.html  form_submit.html  inline.html  rejection.html  shortlisted.html
